# jarvis

./: .SRCINFO  .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  PKGBUILD  README.md  STATIC_BUNDLING.md  install.sh
.github/workflows/: build-native.yml  build.yml  release-native.yml  release.yml
cmake/: BuildLlama.cmake.in
jarvis/: config  packed-refs
jarvis-plasmoid/: config  packed-refs
jarvis-plasmoid/objects/pack/: pack-27d8ffa14402a76565e5cdf8f6d10f7f48498156.idx  pack-27d8ffa14402a76565e5cdf8f6d10f7f48498156.pack  pack-27d8ffa14402a76565e5cdf8f6d10f7f48498156.rev
jarvis/objects/pack/: pack-739d3e034f2cc32611a068b6a06cf670cafacee3.idx  pack-739d3e034f2cc32611a068b6a06cf670cafacee3.pack  pack-739d3e034f2cc32611a068b6a06cf670cafacee3.rev
package/: metadata.json
package/contents/config/: config.qml
package/contents/ui/: configAbout.qml  configCommands.qml  configGeneral.qml  main.qml
packaging/arch/: PKGBUILD
packaging/fedora/: jarvis.spec
scripts/: build-llama.sh  build-static-llama.sh  download-llama.sh
src/plugin/: CMakeLists.txt  jarvisbackend.cpp  jarvisbackend.h  jarvisplugin.cpp  jarvisplugin.h  qmldir
src/plugin/audio/: jarvisaudio.cpp  jarvisaudio.h
src/plugin/commands/: jarviscommands.cpp  jarviscommands.h
src/plugin/llm/: jarvisllmmanager.cpp  jarvisllmmanager.h
src/plugin/settings/: jarvissettings.cpp  jarvissettings.h
src/plugin/system/: jarvissystem.cpp  jarvissystem.h
src/plugin/tts/: jarvisTts.cpp  jarvisTts.h
